Fixed save button asterisk sometime not visible.

--- a/jsapp/scss/components/_kobo.form-builder.scss
+++ b/jsapp/scss/components/_kobo.form-builder.scss
@@ -509,7 +509,7 @@ $t-form-builder-aside-open: 200ms;
 
   .formBuilder-header__cell--buttonsTopRight {
     .formBuilder-header__button--save {
-      max-width: 120px;
+      max-width: 135px;
       text-overflow: ellipsis;
     }
   }
